--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -636,7 +636,7 @@
                                             </variation>
                                         </view>
                                         <textView clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M3z-Su-Ix2">
-                                            <rect key="frame" x="85" y="115" width="225" height="30"/>
+                                            <rect key="frame" x="84" y="115" width="226" height="30"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" id="G05-GT-sq8"/>
@@ -655,12 +655,12 @@
                                             </variation>
                                         </textView>
                                         <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jQY-pz-yxx">
-                                            <rect key="frame" x="10" y="115" width="65" height="65"/>
+                                            <rect key="frame" x="10" y="115" width="64" height="64"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="65" id="BBN-af-gX6"/>
+                                                <constraint firstAttribute="width" constant="64" id="BBN-af-gX6"/>
                                                 <constraint firstAttribute="height" constant="100" id="BSi-1c-XbN"/>
                                                 <constraint firstAttribute="width" constant="100" id="C8I-EZ-43G"/>
-                                                <constraint firstAttribute="height" constant="65" id="OGr-6H-kGh"/>
+                                                <constraint firstAttribute="height" constant="64" id="OGr-6H-kGh"/>
                                             </constraints>
                                             <variation key="default">
                                                 <mask key="constraints">
@@ -679,7 +679,7 @@
                                             </variation>
                                         </imageView>
                                         <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Video" translatesAutoresizingMaskIntoConstraints="NO" id="yH4-O5-Yl8" customClass="DVBWebmIconImageView">
-                                            <rect key="frame" x="28" y="133" width="30" height="30"/>
+                                            <rect key="frame" x="27" y="132" width="30" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="0Oy-4z-DNy"/>
                                                 <constraint firstAttribute="width" constant="30" id="heg-3M-hoz"/>
@@ -710,7 +710,7 @@
                                             </connections>
                                         </button>
                                         <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AGQ-tC-pT5" userLabel="Show gallery">
-                                            <rect key="frame" x="10" y="115" width="65" height="65"/>
+                                            <rect key="frame" x="10" y="115" width="64" height="64"/>
                                             <state key="normal">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
@@ -735,7 +735,7 @@
                                         <constraint firstItem="Hp6-Iv-teI" firstAttribute="leading" secondItem="lu6-fg-lI3" secondAttribute="leading" id="CMa-xZ-3Ho"/>
                                         <constraint firstItem="Y2c-Q9-olV" firstAttribute="leading" secondItem="Hp6-Iv-teI" secondAttribute="trailing" id="Cse-U2-zgZ"/>
                                         <constraint firstItem="3f1-PU-q0D" firstAttribute="leading" secondItem="lu6-fg-lI3" secondAttribute="leading" constant="10" id="HDX-eQ-eTb"/>
-                                        <constraint firstItem="Hp6-Iv-teI" firstAttribute="top" relation="greaterThanOrEqual" secondItem="M3z-Su-Ix2" secondAttribute="bottom" constant="10" id="K1M-0d-SXh"/>
+                                        <constraint firstItem="Hp6-Iv-teI" firstAttribute="top" relation="greaterThanOrEqual" secondItem="M3z-Su-Ix2" secondAttribute="bottom" id="K1M-0d-SXh"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="leading" secondItem="lu6-fg-lI3" secondAttribute="leading" constant="10" id="K4S-vg-FxB"/>
                                         <constraint firstItem="M3z-Su-Ix2" firstAttribute="leading" secondItem="jQY-pz-yxx" secondAttribute="trailing" constant="10" id="PJv-Nf-thQ"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="width" secondItem="AGQ-tC-pT5" secondAttribute="width" id="QhU-so-RWg"/>
@@ -1301,8 +1301,8 @@
         <image name="Video" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XRT-4w-L0S"/>
-        <segue reference="xwW-TO-L0b"/>
+        <segue reference="yeg-8I-aPr"/>
         <segue reference="Xk9-pa-bWO"/>
+        <segue reference="xwW-TO-L0b"/>
     </inferredMetricsTieBreakers>
 </document>
