--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wI0-Z4-0OB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wI0-Z4-0OB">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -858,7 +858,7 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="486"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-YJ-MBR" userLabel="Container For Post Elements" customClass="DVBContainerForPostElements">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="706"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="706.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mfq-Cv-IWZ" userLabel="Markup Container">
                                                 <rect key="frame" x="28" y="130" width="264" height="30"/>
@@ -951,13 +951,8 @@
                                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad"/>
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATw-LV-fb7" userLabel="Update captcha button">
-                                                        <rect key="frame" x="167" y="27" width="33" height="33"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="33" id="MRW-YT-3q3"/>
-                                                            <constraint firstAttribute="height" constant="33" id="nfK-f5-GPE"/>
-                                                        </constraints>
+                                                        <rect key="frame" x="0.0" y="0.0" width="200" height="60"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                        <state key="normal" image="Refresh"/>
                                                         <connections>
                                                             <action selector="captchaUpdateAction:" destination="Bhq-1W-f9J" eventType="touchUpInside" id="ZJb-dP-1eN"/>
                                                         </connections>
@@ -965,6 +960,7 @@
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstItem="R8v-6t-d37" firstAttribute="top" secondItem="QiY-eA-Udo" secondAttribute="top" id="6zy-Ir-wfV"/>
+                                                    <constraint firstItem="ATw-LV-fb7" firstAttribute="height" secondItem="R8v-6t-d37" secondAttribute="height" id="EFj-V3-A2W"/>
                                                     <constraint firstItem="R8v-6t-d37" firstAttribute="centerX" secondItem="jV2-RR-JBv" secondAttribute="centerX" id="Got-PI-h6o"/>
                                                     <constraint firstItem="R8v-6t-d37" firstAttribute="bottom" secondItem="ATw-LV-fb7" secondAttribute="bottom" id="Gwq-O5-c7T"/>
                                                     <constraint firstItem="1dE-mf-Pvb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="R8v-6t-d37" secondAttribute="trailing" constant="10" id="NTz-iA-TjD"/>
@@ -972,6 +968,7 @@
                                                     <constraint firstAttribute="bottom" secondItem="1dE-mf-Pvb" secondAttribute="bottom" id="VrH-by-J4S"/>
                                                     <constraint firstItem="R8v-6t-d37" firstAttribute="centerY" secondItem="jV2-RR-JBv" secondAttribute="centerY" id="eod-mh-c9F"/>
                                                     <constraint firstItem="R8v-6t-d37" firstAttribute="leading" secondItem="QiY-eA-Udo" secondAttribute="leading" id="fQW-eT-a01"/>
+                                                    <constraint firstItem="ATw-LV-fb7" firstAttribute="width" secondItem="R8v-6t-d37" secondAttribute="width" id="h2q-AA-O41"/>
                                                     <constraint firstAttribute="bottom" secondItem="R8v-6t-d37" secondAttribute="bottom" id="kMX-1p-vMJ"/>
                                                     <constraint firstAttribute="height" constant="60" id="n5d-vm-GJa"/>
                                                     <constraint firstItem="R8v-6t-d37" firstAttribute="trailing" secondItem="ATw-LV-fb7" secondAttribute="trailing" id="yHc-BL-eEj"/>
@@ -999,7 +996,7 @@
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                             </textField>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="3" contentMode="scaleToFill" directionalLockEnabled="YES" bounces="NO" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yu0-D0-p1U">
-                                                <rect key="frame" x="15" y="15" width="290" height="100"/>
+                                                <rect key="frame" x="0.0" y="15" width="320" height="100"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="6Hd-jK-8SU"/>
@@ -1008,10 +1005,10 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" spellCheckingType="yes"/>
                                             </textView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j1y-7G-FSY" customClass="DVBPostPhotoContainerView">
-                                                <rect key="frame" x="15" y="365" width="61" height="61"/>
+                                                <rect key="frame" x="15" y="365" width="61.5" height="61.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XbM-Kz-D8k" customClass="DVBPictureToSendPreviewImageView">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61.5" height="61.5"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sby-Ye-Jpl" userLabel="Add photo button container" customClass="DVBAddPhotoIconImageViewContainer">
                                                         <rect key="frame" x="20" y="20" width="22" height="22"/>
@@ -1030,7 +1027,7 @@
                                                         </constraints>
                                                     </view>
                                                     <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nvk-ge-8dV">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61.5" height="61.5"/>
                                                         <connections>
                                                             <action selector="pickPhotoAction:" destination="Bhq-1W-f9J" eventType="touchUpInside" id="V5j-q0-zXo"/>
                                                         </connections>
@@ -1057,7 +1054,7 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="62" height="61"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dXc-Bd-DQN" userLabel="Add photo button container" customClass="DVBAddPhotoIconImageViewContainer">
-                                                        <rect key="frame" x="20" y="20" width="22" height="22"/>
+                                                        <rect key="frame" x="19" y="20" width="22" height="22"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddImage" translatesAutoresizingMaskIntoConstraints="NO" id="nbz-cE-tFY" customClass="DVBAddPhotoIconImageView">
                                                                 <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
@@ -1093,10 +1090,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WY1-1O-Tb7" customClass="DVBPostPhotoContainerView">
-                                                <rect key="frame" x="168" y="365" width="61" height="61"/>
+                                                <rect key="frame" x="167" y="365" width="61.5" height="61.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nJq-yt-HiK" customClass="DVBPictureToSendPreviewImageView">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61.5" height="61.5"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VVK-jY-Wue" userLabel="Add photo button container" customClass="DVBAddPhotoIconImageViewContainer">
                                                         <rect key="frame" x="19" y="20" width="22" height="22"/>
@@ -1115,7 +1112,7 @@
                                                         </constraints>
                                                     </view>
                                                     <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98S-fQ-zan">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61.5" height="61.5"/>
                                                         <connections>
                                                             <action selector="pickPhotoAction:" destination="Bhq-1W-f9J" eventType="touchUpInside" id="OgD-qp-kHZ"/>
                                                         </connections>
@@ -1135,10 +1132,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lmU-VB-eLY" customClass="DVBPostPhotoContainerView">
-                                                <rect key="frame" x="244" y="365" width="61" height="61"/>
+                                                <rect key="frame" x="244" y="365" width="61" height="61.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6z5-Oj-JM8" customClass="DVBPictureToSendPreviewImageView">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61.5"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q4K-gM-aAF" userLabel="Add photo button container" customClass="DVBAddPhotoIconImageViewContainer">
                                                         <rect key="frame" x="19" y="20" width="22" height="22"/>
@@ -1157,7 +1154,7 @@
                                                         </constraints>
                                                     </view>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="815-m3-Nve">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61.5"/>
                                                         <connections>
                                                             <action selector="pickPhotoAction:" destination="Bhq-1W-f9J" eventType="touchUpInside" id="DrP-14-EKX"/>
                                                         </connections>
@@ -1185,7 +1182,7 @@
                                             <constraint firstItem="mfq-Cv-IWZ" firstAttribute="top" secondItem="yu0-D0-p1U" secondAttribute="bottom" constant="15" id="9Mp-zV-3Wd"/>
                                             <constraint firstAttribute="trailing" secondItem="cMi-uW-0S6" secondAttribute="trailing" constant="15" id="Dt8-aL-gre"/>
                                             <constraint firstAttribute="centerX" secondItem="mfq-Cv-IWZ" secondAttribute="centerX" id="FTM-GM-N0v"/>
-                                            <constraint firstAttribute="trailing" secondItem="yu0-D0-p1U" secondAttribute="trailing" constant="15" id="Nhn-vt-Q1G"/>
+                                            <constraint firstAttribute="trailing" secondItem="yu0-D0-p1U" secondAttribute="trailing" id="Nhn-vt-Q1G"/>
                                             <constraint firstItem="j1y-7G-FSY" firstAttribute="height" secondItem="lmU-VB-eLY" secondAttribute="height" id="POH-FH-Jnj"/>
                                             <constraint firstItem="QiY-eA-Udo" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="PxN-16-2jq"/>
                                             <constraint firstItem="j1y-7G-FSY" firstAttribute="top" secondItem="NaI-O3-J3g" secondAttribute="bottom" constant="15" id="T1N-1h-Udk"/>
@@ -1194,7 +1191,7 @@
                                             <constraint firstAttribute="trailing" secondItem="wjr-Ih-9ju" secondAttribute="trailing" constant="15" id="WtV-4l-KSA"/>
                                             <constraint firstAttribute="trailing" secondItem="QiY-eA-Udo" secondAttribute="trailing" constant="15" id="YXB-hy-w9k"/>
                                             <constraint firstItem="j1y-7G-FSY" firstAttribute="width" secondItem="lmU-VB-eLY" secondAttribute="width" id="Yp7-iZ-0J1"/>
-                                            <constraint firstItem="yu0-D0-p1U" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="c85-hy-rhJ"/>
+                                            <constraint firstItem="yu0-D0-p1U" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" id="c85-hy-rhJ"/>
                                             <constraint firstItem="j1y-7G-FSY" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="ejg-09-wTf"/>
                                             <constraint firstItem="hgX-62-n6a" firstAttribute="leading" secondItem="j1y-7G-FSY" secondAttribute="trailing" constant="15" id="eyf-rL-XHL"/>
                                             <constraint firstAttribute="trailing" secondItem="NaI-O3-J3g" secondAttribute="trailing" constant="15" id="fT9-kn-FeO"/>
@@ -1294,7 +1291,6 @@
         <image name="AnswerToPost" width="22" height="22"/>
         <image name="AnswerToPostWithQuote" width="22" height="22"/>
         <image name="Bottompage" width="22" height="22"/>
-        <image name="Refresh" width="44" height="44"/>
         <image name="ReportFlag" width="26" height="26"/>
         <image name="Settings" width="22" height="22"/>
         <image name="ShowAnswersButton" width="22" height="22"/>
@@ -1302,7 +1298,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="yeg-8I-aPr"/>
-        <segue reference="Xk9-pa-bWO"/>
-        <segue reference="xwW-TO-L0b"/>
+        <segue reference="o55-Sb-BOJ"/>
+        <segue reference="Iwy-TH-KYT"/>
     </inferredMetricsTieBreakers>
 </document>
